Add a sandbox tree view

--- a/package.json
+++ b/package.json
@@ -55,8 +55,12 @@
     "views": {
       "ocaml-explorer": [
         {
+          "id": "ocaml-sandbox",
+          "name": "Sandbox"
+        },
+        {
           "id": "ocaml-switches",
-          "name": "Switches"
+          "name": "Opam Switches"
         },
         {
           "id": "ocaml-commands",
@@ -108,6 +112,15 @@
         }
       },
       {
+        "command": "ocaml.refresh-sandbox",
+        "category": "OCaml",
+        "title": "Refresh Sandbox",
+        "icon": {
+          "light": "assets/refresh-light.svg",
+          "dark": "assets/refresh-dark.svg"
+        }
+      },
+      {
         "command": "ocaml.remove-switch",
         "category": "OCaml",
         "title": "Remove Switch",
@@ -117,7 +130,16 @@
         }
       },
       {
-        "command": "ocaml.open-documentation",
+        "command": "ocaml.open-switches-documentation",
+        "category": "OCaml",
+        "title": "Open Documentation",
+        "icon": {
+          "light": "assets/document-search-light.svg",
+          "dark": "assets/document-search-dark.svg"
+        }
+      },
+      {
+        "command": "ocaml.open-sandbox-documentation",
         "category": "OCaml",
         "title": "Open Documentation",
         "icon": {
@@ -171,11 +193,19 @@
           "when": "false"
         },
         {
+          "command": "ocaml.refresh-sandbox",
+          "when": "false"
+        },
+        {
           "command": "ocaml.remove-switch",
           "when": "false"
         },
         {
-          "command": "ocaml.open-documentation",
+          "command": "ocaml.open-switches-documentation",
+          "when": "false"
+        },
+        {
+          "command": "ocaml.open-sandbox-documentation",
           "when": "false"
         }
       ],
@@ -192,17 +222,27 @@
           "command": "ocaml.refresh-switches",
           "when": "view == ocaml-switches",
           "group": "navigation"
+        },
+        {
+          "command": "ocaml.refresh-sandbox",
+          "when": "view == ocaml-sandbox",
+          "group": "navigation"
         }
       ],
       "view/item/context": [
         {
           "command": "ocaml.remove-switch",
-          "when": "view == ocaml-switches && viewItem == switch",
+          "when": "view == ocaml-switches && viewItem == opam-switch",
           "group": "inline"
         },
         {
-          "command": "ocaml.open-documentation",
+          "command": "ocaml.open-switches-documentation",
           "when": "view == ocaml-switches && viewItem == package-with-doc",
+          "group": "inline"
+        },
+        {
+          "command": "ocaml.open-sandbox-documentation",
+          "when": "view == ocaml-sandbox && viewItem == package-with-doc",
           "group": "inline"
         }
       ]
