update opam dependencies

--- a/vscode-ocaml-platform.opam
+++ b/vscode-ocaml-platform.opam
@@ -19,12 +19,12 @@ depends: [
   "dune" {>= "2.7"}
   "vscode" {= version}
   "ocaml" {>= "4.11"}
-  "js_of_ocaml" {>= "3.7.0"}
+  "js_of_ocaml" {>= "3.8.0"}
   "gen_js_api" {>= "1.0.6"}
-  "core_kernel" {>= "v0.14.0"}
+  "core_kernel" {>= "v0.14.1"}
   "promise_jsoo" {>= "0.3.1"}
   "jsonoo" {>= "0.2.1"}
-  "opam-file-format"
+  "opam-file-format" {>= "2.1.2"}
   "odoc" {with-doc}
 ]
 build: [
