Revert name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ocaml",
+  "name": "ocaml-platform",
   "displayName": "OCaml",
   "description": "Official OCaml Support from OCamlLabs",
   "license": "MIT",
